# tokofiktif

./: .env.example  README.md  docker-compose.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  renovate.json
backend/.github/workflows/: ci.yml
backend/src/: main.py  schemas.py
backend/src/config/: config.py
backend/src/domains/chat/: handler.py  routes.py  schema.py
backend/src/domains/faq/: handler.py  routes.py  schema.py
backend/src/domains/ping/: handler.py  routes.py  schema.py
backend/src/exceptions/: client_error.py
backend/src/middlewares/: __init__.py  cors.py  rate_limiter.py
backend/src/utils/: __init__.py  config.py  generator.py  ingest.py  route_mapper.py  utils.py
data/: faq.json
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/.github/workflows/: ci-cd.yml
frontend/app/: SidebarClient.tsx  SidebarWrapper.tsx  globals.css  layout.tsx  page.tsx
